--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "build": "webpack --config webpack.config.js"
   },
   "author": "Shanto",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-esnext": "^1.1.3",
+    "webpack": "^4.32.2"
+  }
 }
